@@ -45,13 +45,16 @@
 #include <CoreFoundation/CFLocale.h>
 #include <CoreFoundation/CFNumber.h>
 #include <CoreFoundation/CFNumberFormatter.h>
+/* #include <CoreFoundation/CFPropertyList.h> */
 #include <CoreFoundation/CFRunLoop.h>
 #include <CoreFoundation/CFSet.h>
+/* #include <CoreFoundation/CFStream.h> */
 #include <CoreFoundation/CFString.h>
 #include <CoreFoundation/CFStringEncodingExt.h>
 #include <CoreFoundation/CFTimeZone.h>
 #include <CoreFoundation/CFTree.h>
 #include <CoreFoundation/CFURL.h>
+#include <CoreFoundation/CFURLAccess.h>
 #include <CoreFoundation/CFUUID.h>
 #include <CoreFoundation/CFXMLNode.h>
 #include <CoreFoundation/CFXMLParser.h>
